# CorseWork-top-analog

./: CMakeLists.txt  MyCourseWork  control.c  control.h  display.c  display.h  main.c  processes.h  read.c  read.h  threads.h
